--- a/invision-community.css
+++ b/invision-community.css
@@ -641,6 +641,7 @@ linear;
 }
 .ipsType_light {
     color: var(--theme-text_light);
+    font-size: 13px;
 }
 
 .ipsBreadcrumb [data-role="breadcrumbList"] {
@@ -891,10 +892,6 @@ html[dir="ltr"] .ipsDataItem_lastPoster.ipsDataItem_withPhoto li {
     margin-left: 50px;
 }
 
-.ipsType_light {
-    color: var(--theme-text_light);
-}
-
 .ipsItemStatus.ipsItemStatus_large.ipsItemStatus_read {
 }
 
@@ -987,7 +984,7 @@ linear;
 }
 
 .ipsBox, #ipsLayout_mainArea > .ipsForm[action$='do=edit'] > .ipsForm {
-    box-shadow: var(--box--boxShadow);
+    box-shadow: 0px 2px 4px -1px #33333340;
     border-radius: var(--box--radius);
     background-color: var(--box--backgroundColor);
 }
@@ -1029,4 +1026,144 @@ html[dir="ltr"] .ipsDataItem_lastPoster.ipsDataItem_withPhoto li {
     position: relative;
     margin: 2px;
     border-radius: 500px;
+}
+
+a.ipsType_blendLinks, .ipsType_blendLinks a {
+    color: inherit;
+}
+
+.ipsType_break {
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
+#ipsLayout_footer {
+    margin: 20px 0 50px;
+}
+
+#ipsLayout_footer #elCopyright {
+    opacity: 0.6;
+    font-size: 12.0px;
+    margin-top: 5px;
+    text-align: center;
+}
+
+#ipsLayout_footer a, #ipsLayout_footer p {
+    font-size: 14.0px;
+    text-decoration: none;
+    color: var(--theme-footer_text);
+}
+
+#ipsLayout_footer p {
+    margin: 0;
+}
+
+html[dir="ltr"] #elWidgetControls {
+    left: 0;
+    border-radius: 0 var(--radius-1) var(--radius-1) 0;
+}
+#elWidgetControls {
+    position: fixed;
+    top: 50%;
+    width: 18px;
+    opacity: 0.5;
+    font-size: 12.0px;
+    background: var(--theme-text_dark);
+    padding-left: 2px;
+    padding-right: 2px;
+    z-index: 999;
+}
+
+.ipsApp .ipsButton_narrow {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+.ipsApp .ipsButton_primary {
+    font-weight: 500;
+    background: var(--theme-primary_button);
+    color: var(--theme-primary_button_font);
+}
+.ipsApp .ipsButton {
+    font-size: 14.0px;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: none;
+    white-space: nowrap;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 10px 20px;
+    border-radius: var(--button--radius);
+    border: 1px solid transparent;
+    transition: 0.1s all 
+linear;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.ipsApp .ipsSpacer_top, .ipsApp .ipsSpacer_both {
+    margin-top: var(--sp-5);
+}
+.ipsType_center {
+    text-align: center;
+}
+.ipsList_inline, .ipsList_reset, .ipsList_icons {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#ipsLayout_footer a, #ipsLayout_footer p {
+    font-size: 14px;
+    text-decoration: none;
+    color: var(--theme-footer_text);
+}
+
+ul#elFooterLinks a {
+    font-weight: 500;
+  font-size: 14px;
+}
+
+a:active, a:focus, a:hover {
+    outline: 0 !important;
+}
+
+.ipsDataItem_statsLarge .ipsDataItem_stats_number {
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.ipsFlex-flex\:11 {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.ipsFlex > *, .ipsFlex-inline > * {
+    flex: 0 1 auto;
+    min-width: 0;
+}
+
+.ipsClearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+.ipsToolList_horizontal > * {
+    max-width: 100%;
+}
+
+.ipsPageHeader h1 {
+    display: inline-block;
+    width: 90%;
 }
