--- a/invision-style.css
+++ b/invision-style.css
@@ -1518,3 +1518,205 @@ li.ipsPhotoPanel.ipsPhotoPanel_small.ipsClearfix.cOnlineUser.ipsGrid_span4 {
     padding: 15px 20px 10px;
     background: #fff;
 }
+
+.cForumRow.collapsed a[data-action="toggleCategory"]::after {
+    content: "\f053";
+}
+
+a#elCreateNew i {
+    font-size: 13px !important;
+}
+
+.ipsNavBar_secondary > li.ipsNavBar_active a {
+    font-weight: bold;
+    font-size: 13px;
+    color: var(--theme-main_nav_tab_font);
+}
+
+.ipsNavBar_secondary > li > a {
+    color: #353c416b;
+    font-size: 13px;
+    font-weight: 600;
+    padding: 0px 18px;
+    line-height: var(--secondary-navigation--height);
+    float: left;
+}
+
+.ipsNavBar_secondary > li > a:hover {
+    color: var(--theme-main_nav_tab_font);
+}
+
+.ipsMenu.ipsMenu_bottomLeft:before, .ipsMenu.ipsMenu_bottomCenter:before, .ipsMenu.ipsMenu_bottomRight:before {
+    border-bottom-color: inherit;
+    margin-bottom: 1px;
+}
+
+.ipsMenu.ipsMenu_bottomCenter:before, .ipsMenu.ipsMenu_bottomCenter:after {
+    border-bottom-color: rgb(var(--theme-area_background_reset));
+    left: 50%;
+    margin-left: -1em;
+    bottom: 100%;
+}
+
+.ipsMenu:not( .ipsMenu_noStem ):before {
+    z-index: 100;
+}
+
+.ipsMenu:not( .ipsMenu_noStem ):after, .ipsMenu:not( .ipsMenu_noStem ):before {
+    content: '';
+    display: none;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: 1em solid transparent;
+    font-size: 8px;
+}
+
+.ipsMenu_topLeft:after, .ipsMenu_topRight:after, .ipsMenu_topCenter:after, .ipsMenu_bottomLeft:after, .ipsMenu_bottomRight:after, .ipsMenu_bottomCenter:after, .ipsMenu_topLeft:before, .ipsMenu_topRight:before, .ipsMenu_topCenter:before, .ipsMenu_bottomLeft:before, .ipsMenu_bottomRight:before, .ipsMenu_bottomCenter:before {
+    pointer-events: none;
+    display: block !important;
+}
+
+ul.ipsMenu, .ipsMenu > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#elUserLink_menu {
+    width: 340px;
+    box-shadow: 0 8px 50px rgba(0, 0, 0, 0.1), 0px 4px 15px rgba(0, 0, 0, 0.05);
+    border: 1px solid #33333326;
+}
+
+.ipsMenu_title {
+    background: #353c4114;
+    padding: 5px 20px;
+    font-size: 12.0px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: var(--theme-text_dark);
+}
+
+.ipsMenu_item {
+    text-align: left;
+    line-height: 1.4;
+}
+
+.ipsMenu_item > a:not( .ipsMenu_itemInline ), .ipsMenu_item > span:not( .ipsMenu_itemInline ), .ipsMenu_item > button:not( .ipsMenu_itemInline ) {
+    position: relative;
+    display: block;
+    padding: 11px 20px;
+    color: var(--theme-text_color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.ipsMenu_sep {
+    border-top: 1px solid #4e515426;
+    margin: 4px;
+}
+
+.ipsMenu_sep hr {
+    display: none;
+}
+
+.ipsMenu {
+    background: var(--theme-area_background_reset);
+    box-shadow: var(--popup--boxShadow);
+    border: var(--popup--border);
+    background-clip: padding-box;
+    border-radius: var(--popup--radius);
+    z-index: 999;
+    position: absolute;
+    max-width: 100vw;
+}
+
+.ipsApp [class*="ipsGap"] > * {
+    margin: var(--ipsGap_row, var(--ipsGap)) 0 0 var(--ipsGap, 0px);
+}
+
+.ipsFlex-flex\:00 {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.ipsFlex > *, .ipsFlex-inline > * {
+    flex: 0 1 auto;
+    min-width: 0;
+}
+
+.ipsDimension\:5 {
+    width: var(--size-5);
+    height: var(--size-5);
+}
+
+img {
+    border-style: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+.ipsType_light {
+    color: var(--theme-text_light);
+}
+
+.ipsMargin_vertical\:half, .ipsMargin_top\:half {
+    margin-top: var(--sp-3) !important;
+}
+
+.ipsType_large:not( .ipsType_richText ) {
+    line-height: 1.25;
+}
+
+.ipsType_large {
+    font-size: 16.0px;
+}
+
+b, strong {
+    font-weight: bolder;
+}
+
+.ipsType_small:not( .ipsType_richText ) {
+    line-height: 1.45;
+}
+
+.ipsType_light {
+    color: var(--theme-text_light);
+}
+
+.ipsType_small {
+    font-size: 12.0px;
+}
+
+ul#elUserLink_menu:before {
+    content: '';
+    display: none;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: 1em solid transparent;
+    font-size: 8px;
+}
+
+.ipsPadding {
+    padding: var(--sp-5) !important;
+}
+
+ul#elUserLink_menu:before {
+    content: '';
+    z-index: 999;
+    margin-left: -1em;
+    display: block;
+    top: -18px;
+    font-size: 10px;
+    position: absolute;
+    pointer-events: none;
+    border: 9px solid transparent;
+    border-bottom-color: #ffffff;
+    left: 50%;
+    transform: translateX(-50%);
+}
