Add contribution comments to invision-style.css
Added comments indicating contributions and customization details.

--- a/invision-style.css
+++ b/invision-style.css
@@ -1,3 +1,4 @@
+/*^^^[MihaiFG was here!!!]^^^Decorații de crăciun^^^*/
 /*   ZĂPADĂ PE HEADER */
 #faNavigation {
     background: #C60800;
@@ -123,6 +124,7 @@ span.borderwrap-event {
  float: left;
  position: absolute;
 }
+/*^^^[Staark was here!!!]^^^Customizarea temei IPS pentru versiunea Invision^^^*/
 :root {
     --color-primary: #2980b9;
     --color-accent: #4a77e8; /* Adăugat pentru consistență link-uri dropdown */
